main.css
/* ... */
html {
    scroll-behavior: smooth;
}

.container {
    width: 1170px;
    margin: 0 auto;
}

h1, h2, h3 {
    text-transform: uppercase;
    font-weight: 700;
}

h1 {
    font-size: 65px;
    text-align: center;
}

h2 {
    font-size: 35px;
    color: #533860;
    letter-spacing: 0.075em;
    text-align: center;
    margin: 80px 0 57px;
}

h3 {
    font-size: 25px;
    color: #fff;
}

h4 {
    font-weight: 700;
    font-size: 22px;
}

h5 {
    font-size: 16px;
    font-weight: 600;
}

a.arrow {
    font-size: 16px;
    font-weight: 600;
    color: #270D34;
    padding: 10px 0;
    transition: all .2s ease-in-out;
}

a.arrow img {
    margin-left: 15px;
}

a.arrow:hover {
    transform: translateX(5px);
}

p {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.5em;
}

.light {
    color: #58515B;
}

ul {
	list-style: none;
}

.d-flex {
    display: flex;
}


/* header */

#header {
    padding: 25px 0;
    border-bottom: 1px solid #ffffff80;
    backdrop-filter: blur(10px);
}

#overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 0;
}

.menu {
    justify-content: space-between;
    align-items: center;
}

img[alt~="Logo"] {
    transition: all .2s ease-in-out;
}

img[alt~="Logo"]:hover {
    transform: scale(1.05);
}

.menu nav > ul > li {
    margin: 0 10px;
}

.menu nav > ul > li > a {
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
    color: #fff;
    letter-spacing: 0.045em;
    padding: 10px;
    position: relative;
    transition: all .2s ease-in-out;
}

.menu nav > ul > li > a::after {
    content: "";
    position: absolute;
    top: 58px;
    left: 0;
    width: 0;
    height: 5px;
    background-color: #ffffffcc;
    transition: all 0.2s ease;
}

.menu nav > ul > li > a.forced::after  {
    width: 100%;
}


.menu nav > ul > li > a:hover,
.menu .lang > a:hover {
    color: #F6E014;
    transition: all .2s ease-in-out;
}

.menu nav > ul > li > a:hover::after {
    width: 100%;
}

.menu .lang {
    align-items: center;
}

.menu .lang > a,
.menu .lang span {
    font-size: 13px;
    text-transform: uppercase;
    color: #fff;
}

.menu .lang span {
    margin: 0 5px;
}

.menu .lang > a.active {
    font-weight: 700;
    font-size: 14px;
}

.burger {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    height: 24px;
    width: 30px;
}

.burger__layer {
    width: 30px;
    height: 4px;
    background-color: #ffffffcc;
}

.slogan__text {
    padding: 45px 0;
}


/* footer */

footer {
    background-color: #60586E;
    color: #fff;
    padding: 70px 0;
}

.footer__wrapper {
    justify-content: space-between;
    align-items: center;
}

.footer__wrapper a {
    color: #fff;
    font-size: 14px;
    font-weight: 400;
}

.footer__wrapper nav a {
    text-transform: uppercase;
    padding: 10px;
    letter-spacing: 0.045em;
}

.footer__wrapper a:hover {
    text-decoration: underline;
}

.footer__wrapper nav li {
    margin: 0 20px;
}



/************* INDEX.HTML *************/

/* header-offer */

.index__cover {
    background: center/cover no-repeat url("img/offer.jpg");
}

.offer__text {
    flex-direction: column;
    align-items: center;
    padding: 195px 0 200px;
}

.offer__text h1 span {
    font-weight: 800;
    font-size: 80px;
    color: #F6E014;
    letter-spacing: 0.075em;
}

.offer__text a {
    padding: 18px 53px;
    background-color: #ffffff99;
    backdrop-filter: blur(10px);
    color: #270D34;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 700;
    border-radius: 50px;
    margin-top: 69px;
    transition: all 0.2s ease-in-out;
    scroll-behavior: smooth;
}

.offer__text a:hover {
    background-color: #ffffffcc;
    box-shadow: 0px 0px 12px -2px #ffffff80;
}


/* section history */

#history {
    padding-bottom: 60px;
}

.history__wrapper {
    align-items: center;
}

.history__dates {
    flex-direction: column;
    margin-left: 55px;
}

.history__date {
    display: flex;
    margin: 15px 0;
}

.history__date h3 {
    color: #270D34;
    margin-right: 20px;
    min-width: 80px;
}

.history__date p {
    margin-top: 9px;
}

.history__wrapper-inverse .history__dates {
    margin-left: 0;
    margin-right: 55px;
}

.history__wrapper-inverse {
    margin-top: 40px;
}

/* section geoposition */

#geoposition {
    padding-bottom: 60px;
}

.geoposition__wrapper {
    align-items: center;
}

.geoposition__wrapper img {
    margin-right: 60px;
}

/* section découvrir */

.decouvrir__wrapper {
    flex-wrap: wrap;
    justify-content: space-between;
    padding-bottom: 90px;
}

.decouvrir__wrapper a {
    position: relative;
    margin-bottom: 30px;
    transition: all 0.5s ease-in-out;
}

.decouvrir__wrapper a > h3 {
    position: absolute;
    left: 10%;
    bottom: 10%;
}

.decouvrir__wrapper a:hover {
    transform: scale(1.02);
}


/************* LIEUX.HTML *************/

/* header */

.lieux__cover {
    background: center/cover no-repeat url("img/header-lieux.jpg");
}

/* section lieux */

.lieux__wrapper {
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 60px;
}

.lieux__card {
    display: flex;
    flex-direction: column;
    width: 31.5%;
    margin-bottom: 60px;
}

.lieux__text-wrapper {
    box-sizing: border-box;
    padding: 23px 30px 20px;
    border: 1px solid #120C3926;
}

.lieux__text-wrapper p {
    margin: 20px 0 10px;
}



/************* MARCHES.HTML *************/

.marches__cover {
    background: center/cover no-repeat url("img/header-marche.jpg");
}

/* section marches */

.marches__wrapper {
    flex-direction: column;
    margin-bottom: 60px;
}

.marches__card {
    display: flex;
    align-items: center;
    margin-bottom: 60px;
}

.marches__card > img {
    margin-right: 66px;
}

.marches__text p {
    margin: 10px 0 30px;
}
/* ... */

